<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/d4"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/four_sided_dice"
        app:layout_constraintEnd_toStartOf="@+id/d6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/d4" />

    <ImageView
        android:id="@+id/d6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/six_sided_dice"
        app:layout_constraintBottom_toBottomOf="@+id/d4"
        app:layout_constraintEnd_toStartOf="@+id/d8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/d4"
        app:layout_constraintTop_toTopOf="@+id/d4"
        app:srcCompat="@drawable/d6" />

    <ImageView
        android:id="@+id/d8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/eight_sided_dice"
        app:layout_constraintBottom_toBottomOf="@+id/d4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/d6"
        app:layout_constraintTop_toTopOf="@+id/d4"
        app:srcCompat="@drawable/d8" />

    <ImageView
        android:id="@+id/d10"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/ten_sided_dice"
        app:layout_constraintEnd_toEndOf="@+id/d4"
        app:layout_constraintStart_toStartOf="@+id/d4"
        app:layout_constraintTop_toBottomOf="@+id/d4"
        app:srcCompat="@drawable/d10" />

    <ImageView
        android:id="@+id/d12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/twelve_sided_dice"
        app:layout_constraintBottom_toBottomOf="@+id/d10"
        app:layout_constraintEnd_toEndOf="@+id/d6"
        app:layout_constraintStart_toStartOf="@+id/d6"
        app:layout_constraintTop_toTopOf="@+id/d10"
        app:srcCompat="@drawable/d12" />

    <ImageView
        android:id="@+id/d20"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="7dp"
        android:contentDescription="@string/twenty_sided_dice"
        app:layout_constraintBottom_toBottomOf="@+id/d12"
        app:layout_constraintEnd_toEndOf="@+id/d8"
        app:layout_constraintStart_toStartOf="@+id/d8"
        app:layout_constraintTop_toTopOf="@+id/d12"
        app:srcCompat="@drawable/d20" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d12" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/presets"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/rollButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_side_button2"
        android:text="@string/roll"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/results"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_text_background"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/your_results_will_appear_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>